--- a/tootoo/r7/tootoo-7-tempate.html
+++ b/tootoo/r7/tootoo-7-tempate.html
@@ -2,27 +2,24 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>Open Source Guide</title>
+<title>TooToo 7 Template</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
-<meta name=description content='' >
+<meta name=description content='Browse and view files on GitHub with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
-<meta name=date content='2017-03-04' >
+<meta name=date content='2017-03-23' >
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
-<script src=tootoo.js ></script>
+<script src=tootoo-7.js ></script>
 <script>
-// Copyright © 2017 Jaanga authors. MIT license
+// Copyright © 2017 PushMe PullYou authors. MIT license
 // https://github.com/showdownjs/showdown
 
-	var users = {};
-
-	users.gh = {
-		user : 'github',
-		repo : 'open-source-guide',
-		branch : 'gh-pages',
+	let user = {
+		user : 'pushme-pullyou',
+		repo : 'pushme-pullyou.github.io',
+		branch : 'master',
 		folder : '',
-		rawgit: true,
 		noIndex : 'true'
 	};
 
@@ -30,18 +27,20 @@
 
 	function init() {
 
-		var css, container, contents, hamburger, menu;
-		var b = '<br>';
+		let css, container, contents, hamburger, menu;
+		const b = '<br>';
 
 		css = document.body.appendChild( document.createElement('style') );
 		css.innerHTML =
 			'html, body { font: 12pt monospace; height: 100%; margin: 0; }' +
 			'a { color: crimson; text-decoration: none; }' +
+			'a:hover { text-decoration: underline; }' +
 			'button, input[type=button] { background-color: #ccc; border: 2px #fff solid; color: #322; }' +
+			'pre, blockquote { background-color: #eee; padding: 10px; }' +
 			'summary { outline: none; }' +
 			'summary h3 { display: inline; }' +
 
-			'.popUp { background-color: white; border: 1px solid red; left: 150px; opacity: 1.0; padding: 5px; position: absolute; width: 120px; z-index: 10; }' +
+			'.popUp { background-color: white; border: 1px solid red; left: 180px; opacity: 1.0; padding: 5px; position: absolute; width: 120px; z-index: 10; }' +
 
 			'#bars { color: crimson; cursor: pointer; font-size: 24pt; text-decoration: none; }' +
 			'#button { background-color: #555; color: #fff; opacity: 0.5; padding: 8px; position: fixed; right: 20px; top: 20px; }' +
@@ -57,7 +56,7 @@
 			'#hamburger h2 { margin: 0;}' +
 
 			'#menu { background-color: #eee; border: 1px #ccc solid; box-sizing:border-box; height: 100%; overflow-y: auto; padding: 0 10px; position: fixed; width: 325px; }' +
-			'#menu h2 {margin: 0; }' +
+			'#menu h2, #menu h4 {margin: 0; }' +
 			'#menuBreadcrumbs h2, #menuBreadcrumbs h3 { font-size: 14pt; margin: 0; }' +
 
 			'#nextFile { color: #888; font-size: 36pt; opacity: 0.5; padding: 8px; position: fixed; right: 20px; top: ' + (0.5 * window.innerHeight ) + 'px; }' +
@@ -74,19 +73,20 @@
 		container.id = 'container';
 		container.innerHTML =
 
-				'<div id=menu >' +
+			'<div id=menu >' +
+
 
 				'<h2>' +
-					'<a href=https://pushme-pullyou.github.io/ title="Pushme-Pullyou - your coming and going happy place" > &#x2766 </a><br>' +
+					'<a href=https://' + user.user + '.github.io/ title="' + user.subText + '" > &#x2766 </a>' + b +
 					'<a href="" title="Click here to refresh this page" >' + document.title + '</a>' +
-					' ~ <a href="https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo/" onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>' +
+//					' ~ <a href="https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo/" onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>' +
+					' ~ <a href="https://github.com/' + user.user + '/' + user.repo + '" onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>' +
+
 				'</h2>' +
 
 				'<div class=popUp id=popHelp style=display:none; ><div>Hi there!</div>Click the i-in-circle, info icon for latest updates.</div>' +
 
-				'<div><small><i>Browse and view the contents of files on GitHub remarkably quickly</i></small></div>' + b +
-
-//				'<p><small>Browse some of my work with a utility I\'m in the process of building.</small></p>' +
+				'<p><small>' + document.head.querySelector( "[name=description]" ).content  + '</small></p>' +
 
 				'<details open>' +
 
@@ -111,17 +111,15 @@
 				TOO.menuSettings +
 
 				'<details>' +
-
-					'<summary><h3> About </h3></summary>' +
-
-					'<p>Copyright &copy; 2017 Jaanga authors. <a href=http://jaanga.github.io/home/r4/index.html#http://jaanga.github.io/jaanga-copyright-and-mit-license.md >MIT license</a>.</p>' +
+					'<summary><h3>About</h3></summary>' +
+					'<p>Copyright &copy; ' + ( new Date() ).getFullYear() + ' ' + user.user + ' authors. ' +
+					'<a href=http://github.com/' + user.user + '/' + user.repo + ' >MIT license</a>.</p>' +
 					'<p>Click the \'i in a circle\' icon for more <a href=index.html#readme.md title="Click here for help and information" >help</a>.</p>' +
-
 				'</details>' +
 
-//				'<hr>' +
+				'<hr>' +
 				'<center><a href=javascript:menu.scrollTop=0; style=text-decoration:none; onmouseover=pop2.style.display=""; onmouseout=pop2.style.display="none"; ><h1> &#x2766 <h1></a></center>' +
-				'<div class=popUp id=pop2 style=display:none;bottom:10px; >Jaanga - your 3D happy place.<br>Click here to return to the top of the page</div>' +
+				'<div class=popUp id=pop2 style=display:none;bottom:20px; >' + user.user + ' - ' + user.subText + '.<br>Click here to return to the top of the page</div>' +
 
 			'</div>' +
 
@@ -129,9 +127,7 @@
 				'<div id=bars title="Click this hamburger to slide the menu" > &#9776 </div>' +
 			'</div>' +
 
-			'<div id=contents >' +
-				'<h1>Typical contents</h1>' +
-			'</div>' +
+			'<div id=contents ></div>' +
 
 		'';
 
@@ -139,7 +135,20 @@
 
 		onWindowResize();
 
-		TOO.init( users[ 'gh' ] );
+
+		if ( location.hash ) {
+
+			path = location.hash.slice( 1 ).split( '/');
+
+			TOO.file = path.pop();
+			TOO.path = path.join();
+
+console.log( TOO.path , TOO.file );
+
+		}
+
+		TOO.init( user );
+
 	}
 
 
