--- a/tootoo/r7/tootoo-7-theo-armour.html
+++ b/tootoo/r7/tootoo-7-theo-armour.html
@@ -2,10 +2,10 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>📈 Jaanga SP500</title>
+<title>TooToo Template 6.2 Theo Armour</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
-<meta name=description content='A variety of tools to browse and view all S&P 500 symbols all at once.' >
-<meta name=keywords content='Three.js,WebGL,CSS,HTML,JavaScript,GitHub,FOSS' >
+<meta name=description content='Browse and view files on GitHub with remarkable ease.' >
+<meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
 <meta name=date content='2017-03-26' >
 </head>
 <body>
@@ -16,10 +16,10 @@
 // https://github.com/showdownjs/showdown
 
 	let user = {
-		user : 'jaanga',
-		subText : 'Your S&P 500 happy place',
-		repo : 'sp500',
-		branch : 'gh-pages',
+		user : 'theo-armour',
+		subText : 'Pet the cat and don\'t get fat',
+		repo : 'theo-armour.github.io',
+		branch : 'master',
 		folder : '',
 		noIndex : true
 	};
@@ -80,7 +80,6 @@
 				'<h2>' +
 					'<a href=https://' + user.user + '.github.io/ title="' + user.subText + '" > &#x2766 </a>' + b +
 					'<a href="" title="Click here to refresh this page" >' + document.title + '</a>' +
-//					' ~ <a href="https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo/" onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>' +
 					' ~ <a href="https://github.com/' + user.user + '/' + user.repo + '" onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>' +
 
 				'</h2>' +
@@ -136,16 +135,12 @@
 
 		onWindowResize();
 
-
 		if ( location.hash ) {
 
 			path = location.hash.slice( 1 ).split( '/');
 
 			TOO.file = path.pop();
 			TOO.path = path.join();
-
-//console.log( 'TOO.path', TOO.path );
-//console.log( 'TOO.file', TOO.file );
 
 		}
 
