--- a/tootoo/r7/tootoo-7-masson-sagemath-docs.html
+++ b/tootoo/r7/tootoo-7-masson-sagemath-docs.html
@@ -2,7 +2,7 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>SageMath Docs</title>
+<title>TooToo 7 SageMath Docs</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
 <meta name=description content='Browse and view files on SageMath Docs with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
