tootoo menu fixes

--- a/tootoo/r7/tootoo-7-the-javascript-way.html
+++ b/tootoo/r7/tootoo-7-the-javascript-way.html
@@ -154,8 +154,8 @@
 				'</i></small></div>' + b +
 
 				'<div>' +
-					'<button onclick=TOO.setMenu=TOO.setMenuContents();  >Table of Conntents</button>' +
-					' <button onclick=TOO.setMenu=TOO.setMenuDefault(); >All Files</button>' +
+					'<button onclick=TOO.setMenu=TOO.setMenuContents;TOO.setMenu();  >Table of Conntents</button>' +
+					' <button onclick=TOO.setMenu=TOO.setMenuDefault;TOO.setMenu(); >All Files</button>' +
 				'</div>' + b +
 
 				'<details open>' +
